@@ -5160,7 +5160,6 @@ typedef struct {
   gcv_object_t all_superclasses        _attribute_aligned_object_; # all superclasses, including itself
   gcv_object_t precedence_list         _attribute_aligned_object_; # ordered list of all superclasses
   gcv_object_t slot_location_table     _attribute_aligned_object_; # hashtable slotname -> where the slot is located
-  gcv_object_t direct_subclasses       _attribute_aligned_object_; /* direct subclasses - list */
   # from here on only for metaclass = <standard-class> or metaclass = <structure-class>
   gcv_object_t slots                   _attribute_aligned_object_;
   gcv_object_t default_initargs        _attribute_aligned_object_;
@@ -5171,6 +5170,7 @@ typedef struct {
   gcv_object_t direct_slots            _attribute_aligned_object_;
   gcv_object_t direct_default_initargs _attribute_aligned_object_;
   gcv_object_t instantiated            _attribute_aligned_object_;
+  gcv_object_t direct_subclasses       _attribute_aligned_object_; /* list of all direct subclasses */
   gcv_object_t proto                   _attribute_aligned_object_; /* class prototype - an instance or NIL */
   gcv_object_t other[unspecified]      _attribute_aligned_object_;
 } *  Class;
